definition-files/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app
  labels:
    name: test-app
spec:
  containers:
  - name: test-app
    image: python-image
    ports:
      - containerPort: 3000
    resources:
    # Either as env
  volumes:
    - name: app-config-volume
      configMap:
        name: app-config
