definition-files/initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <<pod-name>>
  labels:
    app: <<label-value>>
    type: <<label-value>>
spec:
  containers:
    # multiple containers
    - name: nginx-container
      image: nginx
