definition-files/serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <<pod-name>>
  labels:
    app: <<label-value>>
    type: <<label-value>>
spec:
  containers:
    - name: nginx-container
      image: nginx
  serviceAccountName: test-serviceaccount
  # prevent automount of service account
  automountServiceAccountToken: false
